kubernetes/zulip-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: zulip
  namespace: default
  labels:
    app: zulip
spec:
  selector:
    app: zulip
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
